Fixed problems with pr-merge. Added sorting system with placeholders.